# PeanutButter

./: CMakeLists.txt  byte_map.txt  config.json  config.testing.json  file_anatomy_medium.txt  file_anatomy_small.txt
archive/: snowstorm_0000.jag  snowstorm_0001.jag  snowstorm_0002.jag  snowstorm_0003.jag  snowstorm_0004.jag  snowstorm_0005.jag
build-local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  peanutbutter  peanutbutter_runner  peanutbutter_tests
build-local/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-local/Testing/Temporary/: CTestCostData.txt
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/release/: peanutbutter  peanutbutter_runner
src/: ConfigLoader.cpp  ConfigLoader.hpp  Crypt.cpp  Crypt.hpp  Encryptable.hpp  FileCompare.cpp  FileCompare.hpp  Globals.cpp  Globals.hpp  PeanutButterDelegate.hpp  PeanutButterImplementation.cpp  PeanutButterImplementation.hpp  ShouldBundleResult.hpp  main.cpp  main_runner.cpp  recovery_runner.cpp
src/Deprecated/: SnowStorm.cpp  SnowStorm.hpp  SnowStormBundleReader.cpp  SnowStormBundleReader.hpp  SnowStormBundleWriter.cpp  SnowStormBundleWriter.hpp  SnowStormBundleWriterBackward.cpp  SnowStormBundleWriterBackward.hpp  SnowStormBundleWriterForward.cpp  SnowStormBundleWriterForward.hpp  SnowStormFileAndFolderProcessor.cpp  SnowStormFileAndFolderProcessor.hpp
src/IO/: FileMockStore.hpp  FileReaderDelegate.hpp  FileReaderImplementation.cpp  FileReaderImplementation.hpp  FileReaderMock.cpp  FileReaderMock.hpp  FileWriterDelegate.hpp  FileWriterImplementation.cpp  FileWriterImplementation.hpp  FileWriterMock.cpp  FileWriterMock.hpp
src/LayeredEncryption/: LayeredEncryptionDelegate.hpp  LayeredEncryptionImplementation.cpp  LayeredEncryptionImplementation.hpp  LayeredEncryptionMockEmpty.cpp  LayeredEncryptionMockEmpty.hpp
src/SandStorm/: Cipher.hpp  EncryptionLayer.cpp  EncryptionLayer.hpp  PasswordCiper.cpp  PasswordCiper.hpp  ReverseCipher.cpp  ReverseCipher.hpp  SandStorm.cpp  SandStorm.hpp  SplintCipher.cpp  SplintCipher.hpp  TaylorCipher.cpp  TaylorCipher.hpp  WeaveCipher.cpp  WeaveCipher.hpp
src/SnowStorm/: SnowStorm.cpp  SnowStorm.hpp  SnowStormBundlePackerBackward.cpp  SnowStormBundlePackerBackward.hpp  SnowStormBundlePackerForward.cpp  SnowStormBundlePackerForward.hpp  SnowStormBundleReader.cpp  SnowStormBundleReader.hpp  SnowStormBundleSealerBackward.cpp  SnowStormBundleSealerBackward.hpp  SnowStormBundleSealerForward.cpp  SnowStormBundleSealerForward.hpp  SnowStormBundleStats.hpp  SnowStormBundleWriter.cpp  SnowStormBundleWriter.hpp  SnowStormCountResult.cpp  SnowStormCountResult.hpp  SnowStormEngine.cpp  SnowStormEngine.hpp  SnowStormUtils.cpp  SnowStormUtils.hpp
tests/: Test100MockRunsNoEncryption.cpp  Test100RealRunsNoEncryption.cpp  TestMockFileWriterAndReader.cpp  snowstorm_engine_tests.cpp
